- Added graphical representation - More export options (converted export page to servlet)

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/ResultsTable.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/ResultsTable.xhtml
@@ -16,7 +16,7 @@
 <!-- table is buffered, so we can put the navigation on top and on bottom -->
 
 <tr:table id="results" value="#{value}" var="binaryInteraction" varStatus="status"
-        binding="#{searchBean.resultsDataTable}"
+        binding="#{searchBean.resultsDataTable}" emptyText="No interactions found matching the query." 
         rows="50" rowBandingInterval="1" >
 
     <tr:column>
