Several improvements - actions in the table bar - Exporting to different formats - Range navigation

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/ResultsSummary.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/ResultsSummary.xhtml
@@ -6,7 +6,6 @@
         xmlns:t="http://myfaces.apache.org/tomahawk"
         xmlns:c="http://java.sun.com/jstl/core"
         xmlns:s="http://myfaces.apache.org/sandbox"
-        xmlns:a4j="https://ajax4jsf.dev.java.net/ajax"
         xmlns:sf="http://www.ebi.ac.uk/faces/site"
         xmlns:ebi="http://ebi.ac.uk/faces/components">
 
@@ -14,7 +13,7 @@
 
         <ui:component>
 
-            <h:panelGrid columns="2" width="100%"
+            <h:panelGrid columns="2" width="800px"
                          styleClass="intact_table default"
                          columnClasses="intact_summaryCol,intact_summaryCol">
                 <h:panelGroup id="searchSummary">
@@ -36,16 +35,17 @@
                         <f:convertNumber maxFractionDigits="2" minFractionDigits="2"/>
                     </h:outputText>
                     <h:outputText value=" seconds"/>
-                    <br/><br/>
                 </h:panelGroup>
 
-                <h:panelGroup id="relatedResultsPanel">
+                <tr:panelGroupLayout id="relatedResultsPanel" partialTriggers="relatedPoll">
+                    <tr:outputFormatted value="&#160;" rendered="#{searchBean.relatedResults == null}" />
 
-                    <ebi:panelRound rendered="#{!searchBean.advancedMode and
+                    <tr:poll id="relatedPoll" rendered="#{!searchBean.advancedMode and searchBean.relatedResults == null and searchBean.relatedPollEnabled}" interval="50"
+                        pollListener="#{searchBean.doCalculateRelatedResults}"/>
+
+                    <tr:panelBox background="dark" rendered="#{!searchBean.advancedMode and 
                               searchBean.relatedResults != null and
                               (searchBean.relatedResults.numOfExperiments > 0 or searchBean.relatedResults.numOfInteractors > 0)}">
-                        <h:panelGroup>
-                            <p style="letter-spacing:0px">
                                 <h:outputText value="This search has identified "/>
 
                                 <h:outputLink rendered="#{searchBean.relatedResults.numOfExperiments > 0}"
@@ -67,12 +67,8 @@
                                               rendered="#{searchBean.relatedResults.numOfInteractors == 0}"/>
 
                                 <h:outputText value=" containing a match in their name or description. "/>
-
-                                <br/>
-                            </p>
-                        </h:panelGroup>
-                    </ebi:panelRound>
-                </h:panelGroup>
+                    </tr:panelBox>
+                </tr:panelGroupLayout>
             </h:panelGrid>
 
         </ui:component>
