--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/css/intact.css
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/css/intact.css
@@ -42,6 +42,7 @@ td.intact_table {
 .intact_summaryCol {
     width: 50%;
     vertical-align:top;
+    text-align:left;
 }
 
 .intact_button_disabled {
