--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/AdvancedSearch.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/AdvancedSearch.xhtml
@@ -6,7 +6,6 @@
         xmlns:t="http://myfaces.apache.org/tomahawk"
         xmlns:c="http://java.sun.com/jstl/core"
         xmlns:s="http://myfaces.apache.org/sandbox"
-        xmlns:a4j="https://ajax4jsf.dev.java.net/ajax"
         xmlns:sf="http://www.ebi.ac.uk/faces/site"
         xmlns:ebi="http://ebi.ac.uk/faces/components"
         xmlns:bs="http://intact.ebi.ac.uk/binarysearch">
@@ -14,56 +13,48 @@
 
 <ui:component>
 
-<h:panelGroup style="#{style}">
+<tr:panelGroupLayout id="group" partialTriggers="btnClearAdvSearch btnCloseAdvSearch" inlineStyle="#{style}">
 
-<ebi:panelRound rendered="#{rendered == null? true : sf:convertToBoolean(rendered)}">
 
-<h:panelGroup>
+<tr:panelBox text="Advanced Search" background="light"
+             rendered="#{searchBean.advancedMode}">
 
-    <div style="float:right">
-        <h:panelGroup>
-            <h:commandLink value="Close Advanced Search" action="home" styleClass="default"/>
-        </h:panelGroup>
-    </div>
+<!--<h3>Advanced Search-->
+<!--<ebi:help id="advHelp" title="Advanced Search" onlyIcon="true">-->
+<!--<div class="default">-->
+            <!--<h:panelGroup>-->
+                <!--<h:outputText value="As with the Simple Search, for any field of the advance search you can use the "/>-->
 
-    <h3>Advanced Search
-        <ebi:help id="advHelp" title="Advanced Search" onlyIcon="true">
-            <div class="default">
-            <h:panelGroup>
-                <h:outputText value="As with the Simple Search, for any field of the advance search you can use the "/>
+                <!--<h:outputLink value="http://lucene.apache.org/java/docs/queryparsersyntax.html#Terms" target="_blank">-->
+                    <!--<h:outputText value="Lucene's syntax."/>-->
+                <!--</h:outputLink>-->
+            <!--</h:panelGroup>-->
 
-                <h:outputLink value="http://lucene.apache.org/java/docs/queryparsersyntax.html#Terms" target="_blank">
-                    <h:outputText value="Lucene's syntax."/>
-                </h:outputLink>
-            </h:panelGroup>
-
-            <ul>
-                <li>Use OR or space ' ' to search for ANY of the terms in a field</li>
-                <li>Use AND if you want to search for those interactions where ALL of your terms are found</li>
-                <li>Use quotes (") if you look for a specific phrase (group of terms that must be searched together)
-                </li>
-                <li>Use parenthesis for complex queries (e.g. '(XXX OR YYY) AND ZZZ')</li>
-                <li>Wildcards (*,?) can be used between letters in a term or at the end of terms to do fuzzy queries,
-                    <br/>but never at the beginning of a term
-                </li>
-                <li>For a global view of Interaction Types and Detection Methods use the
-                    <a href="http://www.ebi.ac.uk/ontology-lookup/browse.do?ontName=MI" target="_blank">OLS MI Ontology
-                        browser</a></li>
-                <li>Tick the <i>Include children</i> boxes if you want to include in your search all the children for
-                    <br/>that term in the OLS ontolgy
-                </li>
-                <li>Combine the different fields with AND or OR, by changing the <i>Query type</i> radio button</li>
-            </ul>
-            </div>
-        </ebi:help>
-    </h3>
-
-</h:panelGroup>
+            <!--<ul>-->
+                <!--<li>Use OR or space ' ' to search for ANY of the terms in a field</li>-->
+                <!--<li>Use AND if you want to search for those interactions where ALL of your terms are found</li>-->
+                <!--<li>Use quotes (") if you look for a specific phrase (group of terms that must be searched together)-->
+                <!--</li>-->
+                <!--<li>Use parenthesis for complex queries (e.g. '(XXX OR YYY) AND ZZZ')</li>-->
+                <!--<li>Wildcards (*,?) can be used between letters in a term or at the end of terms to do fuzzy queries,-->
+                    <!--<br/>but never at the beginning of a term-->
+                <!--</li>-->
+                <!--<li>For a global view of Interaction Types and Detection Methods use the-->
+                    <!--<a href="http://www.ebi.ac.uk/ontology-lookup/browse.do?ontName=MI" target="_blank">OLS MI Ontology-->
+                        <!--browser</a></li>-->
+                <!--<li>Tick the <i>Include children</i> boxes if you want to include in your search all the children for-->
+                    <!--<br/>that term in the OLS ontolgy-->
+                <!--</li>-->
+                <!--<li>Combine the different fields with AND or OR, by changing the <i>Query type</i> radio button</li>-->
+            <!--</ul>-->
+            <!--</div>-->
+        <!--</ebi:help>-->
+    <!--</h3>-->
 
 <h:panelGroup onkeypress="return submitEnter('searchForm:btnSearch',event)">
 
     <h:panelGrid columns="2" styleClass="default">
-        <tr:panelGroupLayout partialTriggers="Clear">
+        <tr:panelGroupLayout>
             <h:panelGrid columns="3" styleClass="default">
                 <h:outputLabel for="advIdentifier" value="Identifier: acs, ids, aliases"/>
                 <h:inputText id="advIdentifier" value="#{searchBean.advancedSearch.identifier}"/>
@@ -132,14 +123,25 @@
                 <h:outputText value=""/>
                 <h:outputText value=""/>
 
+
+
+             </h:panelGrid>
+
+            <div style="float:right">
+                <tr:commandLink id="btnCloseAdvSearch" text="Close Advanced Search"
+                                immediate="true" partialSubmit="true">
+                    <f:setPropertyActionListener value="false" target="#{searchBean.advancedMode}"/>
+                </tr:commandLink>
+            </div>
+            
+
                 <h:panelGrid columns="2">
-                    <tr:commandButton id="btnSearch" text="Search"
-                                       actionListener="#{searchBean.doAdvancedSearch}"/>
-                    <tr:commandLink text="Clear"
-                                     actionListener="#{searchBean.doClearAdvancedForm}" partialSubmit="advancedSearchRegion"/>
+                    <tr:commandButton id="btnAdvSearch" text="Search" styleClass="submit_button"
+                                       actionListener="#{searchBean.doAdvancedSearch}" partialSubmit="true"/>
+                    <tr:commandLink id="btnClearAdvSearch" text="Clear" 
+                                     actionListener="#{searchBean.doClearAdvancedForm}" partialSubmit="true"/>
                 </h:panelGrid>
 
-            </h:panelGrid>
 
         </tr:panelGroupLayout>
         
@@ -155,9 +157,9 @@
 
 </h:panelGroup>
 
-</ebi:panelRound>
+</tr:panelBox>
 
-</h:panelGroup>
+</tr:panelGroupLayout>
 
 </ui:component>
 
