--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/layout/template-ebi.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/layout/template-ebi.xhtml
@@ -24,11 +24,13 @@
             <!-- IntAct dynamic application should not be indexed by search engines -->
             <meta name='robots' content='nofollow'/>
 
-            <link rel="stylesheet" href="http://www.ebi.ac.uk/inc/css/contents.css" type="text/css"/>
-            <link rel="stylesheet" href="http://www.ebi.ac.uk/inc/css/userstyles.css" type="text/css"/>
-            <link rel="stylesheet" href="http://www.ebi.ac.uk/inc/css/sidebars.css" type="text/css"/>
+            <link rel="stylesheet" href="#{ebisf:absoluteEbiUrl()}/inc/css/contents.css" type="text/css"/>
+            <link rel="stylesheet" href="#{ebisf:absoluteEbiUrl()}/inc/css/userstyles.css" type="text/css"/>
+            <link rel="stylesheet" href="#{ebisf:absoluteEbiUrl()}/inc/css/sidebars.css" type="text/css"/>
 
-             <trh:script source="http://www.ebi.ac.uk/inc/js/contents.js" />
+             <link rel="stylesheet" href="#{requestConfigBean.absoluteContextPath}/css/intact.css" type="text/css"/>
+
+             <trh:script source="#{ebisf:absoluteEbiUrl()}/inc/js/contents.js" />
              <trh:script source="/js/intact.js"/>
 
              <style type="text/css">
@@ -62,7 +64,7 @@
             <div class="headerdiv" id="headerdiv"
                  style="position:absolute; z-index: 1;">
 
-                <iframe src="http://www.ebi.ac.uk/inc/head.html" name="head" id="head" frameborder="0" marginwidth="0"
+                <iframe src="#{ebisf:absoluteEbiUrl()}/inc/head.html" name="head" id="head" frameborder="0" marginwidth="0"
                         marginheight="0"
                         scrolling="no" width="100%" style="position:absolute; z-index: 1; height: 57px;"></iframe>
             </div>
@@ -121,7 +123,7 @@
                     <tr>
                         <td colspan="4" class="footerrow">
                             <div class="footerdiv" id="footerdiv" style="z-index:2;">
-                                <iframe src="http://www.ebi.ac.uk/inc/foot.html" name="foot" frameborder="0"
+                                <iframe src="#{ebisf:absoluteEbiUrl()}/inc/foot.html" name="foot" frameborder="0"
                                         marginwidth="0"
                                         marginheight="0"
                                         scrolling="no" height="22" width="100%" style="z-index:2;"></iframe>
@@ -130,7 +132,7 @@
                     </tr>
                 </table>
 
-                <script src="http://www.ebi.ac.uk/inc/js/footer.js" type="text/javascript"></script>
+                <script src="#{ebisf:absoluteEbiUrl()}/inc/js/footer.js" type="text/javascript"></script>
 
         </div>
 
