Some booleans changed to EL expressions to work with backwards compatibility with jsp 2.0

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/AdvancedSearch.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/AdvancedSearch.xhtml
@@ -130,7 +130,7 @@
             <div style="float:right">
                 <tr:commandLink id="btnCloseAdvSearch" text="Close Advanced Search"
                                 immediate="true" partialSubmit="true">
-                    <f:setPropertyActionListener value="false" target="#{searchBean.advancedMode}"/>
+                    <f:setPropertyActionListener value="#{false}" target="#{searchBean.advancedMode}"/>
                 </tr:commandLink>
             </div>
             
