--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/ResultsTable.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/WEB-INF/facelets/components/ResultsTable.xhtml
@@ -35,9 +35,9 @@
                 <tr:outputFormatted value="&#160;"/>
             </f:facet>
 
-                <b>
+                <strong>
                     <tr:outputText value="View: "/>
-                </b>
+                </strong>
 
             <tr:commandLink id="btnStandardView" immediate="true"
                             text="Standard" disabled="#{!searchBean.expandedView}"
